--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,17 +7,23 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ripost">
-        <activity android:name=".MainActivity">
+        <activity android:name=".UI.SplashScreen.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".UI.Home.MainActivity"/>
+        <activity android:name=".UI.Notification.NotificationActivity"/>
+        <activity android:name=".UI.Search.SearchActivity"/>
+        <activity android:name=".UI.Camera.CameraActivity"/>
+        <activity android:name=".UI.Profile.ProfileActivity"/>
 
     </application>
 
