--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,8 @@ dependencies {
     implementation "androidx.camera:camera-view:1.0.0-alpha27"
     implementation "com.google.code.gson:gson:2.8.5"
 
+    implementation( 'com.github.thekhaeng:pushdown-anim-click:1.1.1' ){
+        exclude group: 'com.android.support'
+    }
+
 }
