--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,8 @@ dependencies {
         exclude group: 'com.android.support'
     }
 
+    implementation ("com.github.bumptech.glide:glide:4.12.0") {
+        exclude group: "com.android.support"
+    }
+
 }
