--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,10 @@ dependencies {
 
 
     implementation 'com.r0adkll:slidableactivity:2.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+
+    implementation 'com.google.firebase:firebase-messaging-ktx'
 
 
 
