--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,9 @@
         <activity android:name=".ui.home.MessageActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Swipe.Back.NoActionBar"/>
+        <activity android:name=".ui.camera.MyMomentsActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Swipe.Back.NoActionBar"/>
 
     </application>
 
